# ibis-renoir-compiler

./: .gitignore  __main__.py  duckdb.db  flink.py  ibis-duckdb.py  ibis-flink.py  ibis-noir-generator.py  main.py  penguins.ddb  query-graph  requirements.txt  requirements3.11.txt  requirements3.11spark.txt  views_risingwave.ipynb  views_risingwave.py  views_spark.ipynb  views_spark.py
benchmark/: benchmark_tests.py  complete_benchmark.sh  compose-kafka.yaml  compose-postgres.yaml  discover_tests.py  evcxr.sh  flink_config.yaml  hyperfine_benchmark.py  hyperfine_benchmark.sh  internal_benchmark.py  internal_benchmark.sh  memory_benchmark.sh  merge_jsons.py  pip_install_disregard_pins.sh  prepare_duckdb_tables.sh  start_evcxr.sh  start_flink.sh  start_postgres.sh  start_risingwave.sh  start_risingwave_local.sh  stop_flink.sh  summary_plot.py
codegen/: __init__.py  argument_parser.py  benchmark.py  generator.py  ibis-noir-generator.py  operators.py  struct.py  utils.py
data/: fruit_left.csv  int-1-string-1.csv  int-3.csv
log/: codegen_log.csv  hyperfine_duckdb_test_nexmark_query_2_100000000.json  memo_log.csv
noir-template/: Cargo.toml  main_bot.rs  main_expected_scratch.rs  main_top.rs
noir-template/src/: main.rs
noir_template/: Cargo.toml  evcxr_flags.evcxr  evcxr_preload.rs  init.evcxr  main_bot.rs  main_bot_evcxr.rs  main_bot_no_print.rs  main_evcxr.rs  main_top.rs  main_top_evcxr.rs  preload_evcxr.rs
test/: __init__.py  rebuild_expected.py  test.py  test_base.py  test_nexmark.py  test_operators.py  test_scenarios.py  test_tpc.py  tests.py
(+745 files in other folders)
