[package]
name = "noir-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.12"
noir-compute = { git = "https://github.com/deib-polimi/noir" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

