[package]
name = "noir-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.12"
renoir = { git = "https://github.com/deib-polimi/renoir" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.197"
csv = "1.3.0"
openssl = { version = "0.10.64", features = ["vendored"] }
mimalloc = { version = "0.1.42", default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
